[package]
name = "renum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
anyhow = "1.0.72"
beni = { git = "https://github.com/r1k0t3k1/beni" }
async-std = "1.12.0"
